--- a/src/app/preparation/preparation-popover-actions/preparation-popover-actions.component.html
+++ b/src/app/preparation/preparation-popover-actions/preparation-popover-actions.component.html
@@ -1,5 +1,9 @@
 <ion-content>
   <ion-list lines="full">
+    <ion-item (click)="choose(getStaticActions().CUSTOM_PARAMETERS)" button tappable>
+      <ion-icon name="beanconqueror-finished" slot="start"></ion-icon>
+      <span>{{"CUSTOM_PARAMETERS" | translate}}</span>
+    </ion-item>
   <ion-item (click)="choose(getStaticActions().ARCHIVE)" *ngIf="data.finished === false" button tappable>
     <ion-icon name="beanconqueror-finished" slot="start"></ion-icon>
     <span>{{"ARCHIVE" | translate}}</span>
