--- a/src/components/bean-information/bean-information.component.scss
+++ b/src/components/bean-information/bean-information.component.scss
@@ -1,95 +1,40 @@
 :host {
   ion-card {
-    height: 200px;
-    min-height: 200px;
-    max-height: 200px;
-
     ion-card-content {
-      height: 100%;
-
-      ion-grid {
-        height: 100%;
-
-        ion-row {
-          height: 100%;
-        }
-      }
+      padding-top: var(--padding-top);
     }
   }
-  button[justify-content-start] .button-inner {
-    justify-content: flex-start;
-  }
 
-  .full-sized-icon {
-    width: calc(100% - 8px);
-    height: calc(100% - 16px);
+  // Overwrite
+  .button-top-absolute {
     position: absolute;
-    margin-top: 8px;
+    top: -20px;
+    right: -20px;
+    min-height: 45px;
   }
 
-  .color-black {
-    color: black;
-  }
-
-  ion-slide {
-    margin: 0px;
-  }
-
-  ::ng-deep img {
-    width: 100%;
-    height: 200px;
-    display: block;
-    object-fit: cover;
-  }
-
-  ::ng-deep img.preload-img {
-    width: 100%;
-    height: 100%;
-    display: block;
-    object-fit: contain;
-  }
-
-
-
-
-  ion-row.center-col ion-col {
-    display: flex;
-    align-items: center
-  }
-
-  ion-col.center-col {
-    display: flex;
-    align-items: center
-  }
-
-  ion-list {
-    background: none;
-    margin: 0px;
-    padding: 0px;
-
-    ion-item {
-      ion-col {
-        -ms-text-overflow: ellipsis;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        overflow: hidden;
-      }
-
-      --background: none;
-      --padding-start: 0px;
-      --padding-end: 0px;
-      --inner-padding-end: 0px;
-      font-size: 14px;
-      --min-height: 0px;
-
-      ion-icon {
-        font-size: 14px;
-        margin-right: 0px;
-        margin-top: 0px;
-        margin-bottom: 0px;
-      }
+  .no-ion-col-vertical-padding {
+    ion-col {
+      padding-top: 0px !important;
+      padding-bottom: 0px !important;
     }
 
+  }
+
+  table {
+    border-spacing: 0px;
+    table-layout: fixed;
+    word-break: break-word;
+  }
+  td.accent-value {
+    color: var(--ion-color-accent);
+    font-size:25px;
+    font-weight: bold;
+  }
+  td span.accent-value {
+    color: var(--ion-color-accent);
+    font-size:10px;
+    font-weight: bold;
   }
 
 }
