New layout changes, added first preparation customization.
#133 #141

--- a/src/app/brew-parameter/brew-parameter.page.html
+++ b/src/app/brew-parameter/brew-parameter.page.html
@@ -27,4 +27,11 @@
       {{"NAV_DEFAULT_PARAMETERS" | translate}}
     </ion-item>
   </ion-card>
+
+  <ion-card class="ion-padding">
+    <ion-card-title>{{"BREW_PARAMETER_CUSTOMIZE_TITLE" | translate}}</ion-card-title>
+    <ion-card-content class="ion-no-padding">
+{{"BREW_PARAMETER_CUSTOMIZE_DESCRIPTION" | translate}}
+    </ion-card-content>
+  </ion-card>
 </ion-content>
