--- a/src/app/brew-parameter/sort-parameter/sort-parameter.component.html
+++ b/src/app/brew-parameter/sort-parameter/sort-parameter.component.html
@@ -12,40 +12,7 @@
   </ion-toolbar>
 </ion-header>
 <ion-content class="ion-padding">
-  <ion-card>
-    <ion-title class="ion-padding-top">{{"SORT_PARAMETERS_BEFORE" | translate  }}</ion-title>
-    <ion-reorder-group (ionItemReorder)="reorder_brew($event,'before')" disabled="false">
-      <ion-item *ngFor="let index of brewOrdersBefore; let last = last" lines="{{last?'none':''}}" tappable>
-        <ion-label>
-          {{index.label | translate}}
-        </ion-label>
-        <ion-reorder slot="end"></ion-reorder>
-      </ion-item>
-    </ion-reorder-group>
-  </ion-card>
+  <sort-custom-parameter [data]="settings"></sort-custom-parameter>
 
-  <ion-card>
-    <ion-title class="ion-padding-top">{{"SORT_PARAMETERS_MEANWHILE" | translate  }}</ion-title>
-    <ion-reorder-group (ionItemReorder)="reorder_brew($event,'while')" disabled="false">
-      <ion-item *ngFor="let index of brewOrdersWhile; let last = last" lines="{{last?'none':''}}" tappable>
-        <ion-label>
-          {{index.label | translate}}
-        </ion-label>
-        <ion-reorder slot="end"></ion-reorder>
-      </ion-item>
-    </ion-reorder-group>
-  </ion-card>
-
-  <ion-card>
-    <ion-title class="ion-padding-top">{{"SORT_PARAMETERS_AFTER" | translate  }}</ion-title>
-    <ion-reorder-group (ionItemReorder)="reorder_brew($event,'after')" disabled="false">
-      <ion-item *ngFor="let index of brewOrdersAfter; let last = last" lines="{{last?'none':''}}" tappable>
-        <ion-label>
-          {{index.label | translate}}
-        </ion-label>
-        <ion-reorder slot="end"></ion-reorder>
-      </ion-item>
-    </ion-reorder-group>
-  </ion-card>
 
 </ion-content>
