--- a/src/app/brew-parameter/manage-parameter/manage-parameter.component.html
+++ b/src/app/brew-parameter/manage-parameter/manage-parameter.component.html
@@ -12,109 +12,5 @@
   </ion-toolbar>
 </ion-header>
 <ion-content class="ion-padding">
-
-  <ion-card>
-    <ion-title class="ion-padding-top">{{"SORT_PARAMETERS_BEFORE" | translate  }}</ion-title>
-    <ion-item tappable>
-      <ion-label>{{"BREW_DATA_GRIND_SIZE" | translate}}</ion-label>
-      <ion-checkbox (ngModelChange)="settingsChanged($event)" [(ngModel)]="settings.grind_size"></ion-checkbox>
-    </ion-item>
-    <ion-item tappable>
-      <ion-label>{{"BREW_DATA_GRIND_WEIGHT" | translate}}</ion-label>
-      <ion-checkbox (ngModelChange)="settingsChanged($event)" [(ngModel)]="settings.grind_weight"></ion-checkbox>
-    </ion-item>
-    <ion-item tappable>
-      <ion-label>{{"BREW_DATA_BREW_TEMPERATURE" | translate}}</ion-label>
-      <ion-checkbox (ngModelChange)="settingsChanged($event)" [(ngModel)]="settings.brew_temperature"></ion-checkbox>
-    </ion-item>
-    <ion-item tappable>
-      <ion-label>{{"BREW_DATA_PREPARATION_METHOD" | translate}}</ion-label>
-      <ion-checkbox (ngModelChange)="settingsChanged($event)"
-                    [(ngModel)]="settings.method_of_preparation"></ion-checkbox>
-    </ion-item>
-    <ion-item tappable>
-      <ion-label>{{"BREW_DATA_BEAN_TYPE" | translate}}</ion-label>
-      <ion-checkbox (ngModelChange)="settingsChanged($event)" [(ngModel)]="settings.bean_type"></ion-checkbox>
-    </ion-item>
-    <ion-item tappable>
-      <ion-label>{{"BREW_DATA_MILL" | translate}}</ion-label>
-      <ion-checkbox (ngModelChange)="settingsChanged($event)" [(ngModel)]="settings.mill"></ion-checkbox>
-    </ion-item>
-    <ion-item tappable>
-      <ion-label>{{"BREW_DATA_MILL_SPEED" | translate}}</ion-label>
-      <ion-checkbox (ngModelChange)="settingsChanged($event)" [(ngModel)]="settings.mill_speed"></ion-checkbox>
-    </ion-item>
-    <ion-item tappable>
-      <ion-label>{{"BREW_DATA_MILL_TIMER" | translate}}</ion-label>
-      <ion-checkbox (ngModelChange)="settingsChanged($event)" [(ngModel)]="settings.mill_timer"></ion-checkbox>
-    </ion-item>
-    <ion-item lines="none" tappable>
-      <ion-label>{{"BREW_DATA_PRESSURE_PROFILE" | translate}}</ion-label>
-      <ion-checkbox (ngModelChange)="settingsChanged($event)" [(ngModel)]="settings.pressure_profile"></ion-checkbox>
-    </ion-item>
-  </ion-card>
-  <ion-card>
-    <ion-title class="ion-padding-top">{{"SORT_PARAMETERS_MEANWHILE" | translate  }}</ion-title>
-    <ion-item tappable>
-      <ion-label>{{"BREW_DATA_TEMPERATURE_TIME" | translate}} / {{"BREW_DATA_SURF_TIME" | translate}}</ion-label>
-      <ion-checkbox (ngModelChange)="settingsChanged($event)"
-                    [(ngModel)]="settings.brew_temperature_time"></ion-checkbox>
-    </ion-item>
-    <ion-item tappable>
-      <ion-label>{{"BREW_DATA_TIME" | translate}}</ion-label>
-      <ion-checkbox (ngModelChange)="settingsChanged($event)" [(ngModel)]="settings.brew_time"></ion-checkbox>
-    </ion-item>
-    <ion-item tappable>
-      <ion-label>{{"BREW_DATA_COFFEE_FIRST_DRIP_TIME" | translate}}</ion-label>
-      <ion-checkbox (ngModelChange)="settingsChanged($event)"
-                    [(ngModel)]="settings.coffee_first_drip_time"></ion-checkbox>
-    </ion-item>
-    <ion-item lines="none" tappable>
-      <ion-label>{{"BREW_DATA_COFFEE_BLOOMING_TIME" | translate}}</ion-label>
-      <ion-checkbox (ngModelChange)="settingsChanged($event)"
-                    [(ngModel)]="settings.coffee_blooming_time"></ion-checkbox>
-    </ion-item>
-  </ion-card>
-  <ion-card>
-    <ion-title class="ion-padding-top">{{"SORT_PARAMETERS_AFTER" | translate  }}</ion-title>
-    <ion-item tappable>
-      <ion-label>{{"BREW_DATA_BREW_QUANTITY" | translate}}</ion-label>
-      <ion-checkbox (ngModelChange)="settingsChanged($event)" [(ngModel)]="settings.brew_quantity"></ion-checkbox>
-    </ion-item>
-    <ion-item tappable>
-      <ion-label>{{"BREW_DATA_COFFEE_TYPE" | translate}}</ion-label>
-      <ion-checkbox (ngModelChange)="settingsChanged($event)" [(ngModel)]="settings.coffee_type"></ion-checkbox>
-    </ion-item>
-    <ion-item tappable>
-      <ion-label>{{"BREW_DATA_COFFEE_CONCENTRATION" | translate}}</ion-label>
-      <ion-checkbox (ngModelChange)="settingsChanged($event)"
-                    [(ngModel)]="settings.coffee_concentration"></ion-checkbox>
-    </ion-item>
-
-    <ion-item tappable>
-      <ion-label>{{"BREW_DATA_RATING" | translate}}</ion-label>
-      <ion-checkbox (ngModelChange)="settingsChanged($event)" [(ngModel)]="settings.rating"></ion-checkbox>
-    </ion-item>
-    <ion-item tappable>
-      <ion-label>{{"BREW_DATA_NOTES" | translate}}</ion-label>
-      <ion-checkbox (ngModelChange)="settingsChanged($event)" [(ngModel)]="settings.note"></ion-checkbox>
-    </ion-item>
-    <ion-item tappable>
-      <ion-label>{{"BREW_DATA_CUSTOM_BREW_TIME" | translate}}</ion-label>
-      <ion-checkbox (ngModelChange)="settingsChanged($event)"
-                    [(ngModel)]="settings.set_custom_brew_time"></ion-checkbox>
-    </ion-item>
-    <ion-item tappable>
-      <ion-label>{{"BREW_DATA_ATTACHMENTS" | translate}}</ion-label>
-      <ion-checkbox (ngModelChange)="settingsChanged($event)" [(ngModel)]="settings.attachments"></ion-checkbox>
-    </ion-item>
-    <ion-item tappable>
-      <ion-label>{{"BREW_DATA_BREW_BEVERAGE_QUANTITY" | translate}}</ion-label>
-      <ion-checkbox (ngModelChange)="settingsChanged($event)" [(ngModel)]="settings.brew_beverage_quantity"></ion-checkbox>
-    </ion-item>
-    <ion-item lines="none" tappable>
-      <ion-label>{{"BREW_DATA_TDS" | translate}}</ion-label>
-      <ion-checkbox (ngModelChange)="settingsChanged($event)" [(ngModel)]="settings.tds"></ion-checkbox>
-    </ion-item>
-  </ion-card>
+  <manage-custom-parameter [data]="settings"></manage-custom-parameter>
 </ion-content>
