--- a/src/components/preparation-information-card/preparation-information-card.component.html
+++ b/src/components/preparation-information-card/preparation-information-card.component.html
@@ -1,15 +1,21 @@
 <ion-card class="long-card">
-  <ion-card-content>
+  <ion-card-content class="no-ion-col-vertical-padding ion-padding-top">
+    <ion-grid>
+      <ion-row>
+        <ion-col size="11"><div class="ion-no-padding font-size-20 ion-title">{{preparation.name}}</div></ion-col>
+
+        <ion-col size="1">
+          <ion-button (click)="showPreparationActions($event)" class="button-top-absolute"
+                      color="accent" fill="clear" tappable>
+            <ion-icon name="beanconqueror-dots" slot="icon-only"></ion-icon>
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
     <ion-grid class="ion-no-padding">
       <ion-row style="padding:8px;">
-        <ion-col class="ion-justify-content-center" size="3">
-          <ion-icon class="full-sized-icon" name="{{preparation.getIcon()}}"></ion-icon>
-        </ion-col>
-        <ion-col class="ion-padding-start" size="8">
+        <ion-col size="8">
           <ion-list lines="none" style="width:100%;">
-            <ion-item>
-              <ion-col class="ion-text-bold" size="12">{{preparation.name}}</ion-col>
-            </ion-item>
             <ion-item>
               <ion-col size="8">{{"PAGE_HOME_TOTAL_BREWS" | translate}}
               </ion-col>
@@ -40,11 +46,8 @@
             </ion-item>
           </ion-list>
         </ion-col>
-        <ion-col size="1">
-          <ion-button (click)="showPreparationActions($event)" class="button-top-absolute"
-                      color="accent" fill="clear" tappable>
-            <ion-icon name="beanconqueror-dots" slot="icon-only"></ion-icon>
-          </ion-button>
+        <ion-col class="ion-justify-content-center" size="4">
+          <ion-icon class="full-sized-icon" name="{{preparation.getIcon()}}"></ion-icon>
         </ion-col>
       </ion-row>
     </ion-grid>
