--- a/src/app/beans/beans-add/beans-add.component.html
+++ b/src/app/beans/beans-add/beans-add.component.html
@@ -69,14 +69,22 @@
         </ion-item>
       </ion-list>
     </ion-item>
-
-
     <ion-item>
       <ion-label position="stacked">{{"BEAN_DATA_MIX" | translate}}</ion-label>
       <ion-select #beanMix="ngModel" [(ngModel)]="data.beanMix" cancelText="{{'CANCEL'| translate }}" name="beanMix"
                   okText="{{'CHOOSE'| translate }}"
                   placeholder="{{'BEAN.PLACE_HOLDER.BEAN_DATA_MIX' | translate}}">
         <ion-select-option *ngFor="let key of mixEnum | keys" value="{{key}}">{{mixEnum[key]}}</ion-select-option>
+      </ion-select>
+    </ion-item>
+    <ion-item>
+      <ion-label position="stacked">{{"BEAN_DATA_ROASTING_TYPE" | translate}}</ion-label>
+
+      <ion-select #bean_roasting_type="ngModel" [(ngModel)]="data.bean_roasting_type" cancelText="{{'CANCEL'| translate }}" name="bean_roasting_type"
+                  okText="{{'CHOOSE'| translate }}"
+                  placeholder="{{'BEAN.PLACE_HOLDER.BEAN_DATA_ROASTING_TYPE' | translate}}"
+                  style="padding-left:0px!important;width: 100%; min-width: 100%;">
+        <ion-select-option *ngFor="let key of beanRoastingTypeEnum | keys" value="{{key}}">{{beanRoastingTypeEnum[key]}}</ion-select-option>
       </ion-select>
     </ion-item>
     <ion-item>
@@ -100,6 +108,22 @@
                  placeholder="{{'BEAN.PLACE_HOLDER.BEAN_DATA_COST' | translate}}" prevent-characters
                  remove-empty-number spellcheck="false" type="text"
                  autocapitalize="off">
+      </ion-input>
+  </ion-item>
+    <ion-item>
+      <ion-label position="stacked">{{"BEAN_DATA_DECAFFEINATED" | translate}}</ion-label>
+      <ion-checkbox #decaffeinated="ngModel" [(ngModel)]="data.decaffeinated" name="decaffeinated"></ion-checkbox>
+    </ion-item>
+  <ion-item>
+    <ion-label position="stacked">{{"BEAN_DATA_URL" | translate}}</ion-label>
+    <ion-input #url="ngModel" [(ngModel)]="data.url" autocapitalize="sentences" name="ean_article_number" placeholder="{{'BEAN.PLACE_HOLDER.BEAN_DATA_URL' | translate}}"
+               spellcheck="false" type="text">
+    </ion-input>
+  </ion-item>
+    <ion-item>
+      <ion-label position="stacked">{{"BEAN_DATA_EAN" | translate}}</ion-label>
+      <ion-input #ean_article_number="ngModel" [(ngModel)]="data.ean_article_number" autocapitalize="sentences" name="ean_article_number" placeholder="{{'BEAN.PLACE_HOLDER.BEAN_DATA_EAN' | translate}}"
+                 spellcheck="false" type="text">
       </ion-input>
     </ion-item>
     <ion-item>
@@ -162,7 +186,7 @@
     <ion-item>
       <ion-label position="stacked">{{"BEAN_DATA_ELEVATION" | translate}}</ion-label>
       <ion-input #elevation="ngModel" [(ngModel)]="beanInformation.elevation" autocapitalize="sentences"
-                 name="country" placeholder="{{'BEAN.PLACE_HOLDER.BEAN_DATA_COUNTRY' | translate}}" spellcheck="false"
+                 name="country" placeholder="{{'BEAN.PLACE_HOLDER.BEAN_DATA_ELEVATION' | translate}}" spellcheck="false"
                  type="text">
       </ion-input>
     </ion-item>
